feat: board initial integration on mainpage

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,1 +1,17 @@
-<p>mainpage works!</p>
+<div class="mainpage">
+  <h1>Chessmaster3k</h1>
+  <div class="board-container">
+    <iframe
+      id="iframe1"
+      src="/iframepage"
+      frameborder="0"
+      class="board"
+    ></iframe>
+    <iframe
+      id="iframe2"
+      src="/iframepage"
+      frameborder="0"
+      class="board"
+    ></iframe>
+  </div>
+</div>
