--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,8 @@
-<p>board works!</p>
+<ngx-chess-board
+  #board
+  [size]="400"
+  [showCoordinates]="true"
+  [darkTileColor]="'#b58863'"
+  [lightTileColor]="'#f0d9b5'"
+  (moveChange)="onMove($event)"
+></ngx-chess-board>
