feat: sync between the two board

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,5 +4,5 @@
   [showCoordinates]="true"
   [darkTileColor]="'#b58863'"
   [lightTileColor]="'#f0d9b5'"
-  (moveChange)="onMove($event)"
+  (moveChange)="onMove()"
 ></ngx-chess-board>
