--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -2,14 +2,14 @@
   <h1>Chessmaster3k</h1>
   <div class="board-container">
     <iframe
-      id="iframe1"
+      id="whiteBoard?isBlack=false"
       src="/iframepage"
       frameborder="0"
       class="board"
     ></iframe>
     <iframe
-      id="iframe2"
-      src="/iframepage"
+      id="blackBoard"
+      src="/iframepage?isBlack=true"
       frameborder="0"
       class="board"
     ></iframe>
