fix: typo on html id

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -2,8 +2,8 @@
   <h1>Chessmaster3k</h1>
   <div class="board-container">
     <iframe
-      id="whiteBoard?isBlack=false"
-      src="/iframepage"
+      id="whiteBoard"
+      src="/iframepage?isBlack=false"
       frameborder="0"
       class="board"
     ></iframe>
