feat: custom FEN code inpu

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -7,4 +7,5 @@
   (moveChange)="onMove()"
   [darkDisabled]="!isBlack && !isMyTurn"
   [lightDisabled]="isBlack && !isMyTurn"
+  [ngClass]="{disabled: !isMyTurn}"
 ></ngx-chess-board>
