feat: saving gameState on localStorage

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -24,7 +24,7 @@
       type="text"
       placeholder="Enter FEN"
       class="fen-input"
-      [(ngModel)]="customFen"
+      [(ngModel)]="customFenButtonInput"
     />
     <button (click)="setCustomFEN()">Set Custom FEN</button>
   </div>
