chore: renamed mainpage to local-game

--- a/src/app/local-game/local-game.component.html
+++ b/src/app/local-game/local-game.component.html
@@ -1,4 +1,4 @@
-<div class="mainpage">
+<div class="local-game">
   <h1>Chessmaster3k</h1>
   <div class="fen-display">FEN: {{currentFen}}</div>
   <div class="board-container">
