feat: appmenu bar

--- a/src/app/local-game/local-game.component.html
+++ b/src/app/local-game/local-game.component.html
@@ -1,5 +1,5 @@
+<app-menu-bar></app-menu-bar>
 <div class="local-game">
-  <h1>Chessmaster3k</h1>
   <div class="fen-display">FEN: {{currentFen}}</div>
   <div class="board-container">
     <!-- White Board -->
